--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ certifi==2023.11.17
 charset-normalizer==3.3.2
 click==8.1.7
 command-not-found==0.3
+commandnotfound==0.5.0
 contourpy==1.2.0
 cryptography==3.4.8
 cycler==0.12.1
